--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.20.4",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "axios": "^0.21.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -22,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "generate:data": "node scripts/dbGenerator.js",    
+    "generate:data": "node scripts/dbGenerator.js",
     "db:server": "json-server --port=9200 --watch db.json",
     "start:server": "npm run generate:data && npm run db:server"
   },
