--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@types/react-dom": "^17.0.1",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
+    "express": "^4.17.2",
     "node-sass": "^7.0.1",
+    "nodemon": "^2.0.15",
+    "pg": "^8.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -26,8 +29,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "generate:data": "node scripts/dbGenerator.js",
+    "server": "nodemon ./server/server.js",
     "db:server": "json-server --port=9200 --watch db.json",
-    "start:server": "npm run generate:data && npm run db:server",
+    "start:db:server": "npm run generate:data && npm run db:server",
     "e2e:open": "npx cypress open",
     "e2e:run": "npx cypress run"
   },
