--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "eject": "react-scripts eject",
     "generate:data": "node scripts/dbGenerator.js",
     "server": "nodemon ./server/server.js",
-    "db:server": "json-server --port=9200 --watch db.json",
+    "server2": "nodemon ./server/server2.js",
+    "db:server": "json-server --port=9200 db.json",
     "start:db:server": "npm run generate:data && npm run db:server",
     "e2e:open": "npx cypress open",
-    "e2e:run": "npx cypress run"
+    "e2e:run": "npx cypress run",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src --color",
+    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src --fix --color"
   },
   "eslintConfig": {
     "extends": [
@@ -54,7 +57,17 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
     "cypress-axe": "^0.12.2",
-    "json-server": "^0.16.3"
+    "eslint": "^8.8.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "json-server": "^0.16.3",
+    "prettier": "2.5.1"
   }
 }
