--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.1",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.15",
